--- a/Decidr.Api/appsettings.json
+++ b/Decidr.Api/appsettings.json
@@ -8,5 +8,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DecidrDb": "Host=localhost;Port=5432;Database=decidrdb;Username=postgres;Password=postgres"
+  },
+  "Jwt": {
+    "Key": "dev_1234567890_1234567890_1234567890"
   }
 }
